1.5.1
MISC
    - Many repu fixes
    - Ruputation has now a own menu button at the hero panel

1.5.0
NEW
    - Added option to show item level at bags

FIXES
    - Fix hero frame sizer
    - Fix actionbar scaling

1.4.1
FIXES
    - Fix separate bags in reversed order

1.4.0
NEW
    - Added scaler to hero panel

FIXES
    - Fix separate bags in reversed order

1.3.0
NEW
    - Added option to separate bags

FIXES
    - Fix an issue with raid frames are always in class color
    - Fix auto repair

1.2.0
NEW
    - Added combat text to pet frame portrait

FIXES
    - You can now close the worlmap with ESC
    - Fix social data text
    - Fix auto repair
    - Fix stancebar issue

1.1.1
FIXES
    - Fix missing focus setting
    - Start fixing bag sorting
    - Fix zhTW font issue

1.1.0
NEW
    - Added Focus and Focus target frame
    - Show cooldown at bags, character and spellbook correct by using our own cooldown system
    - Added GearQuipper TBC support: Thanks to Prayos for the quick support and add the GW2 compability on GearQuipper side :)
        (https://www.curseforge.com/wow/addons/gearquipper)

FIXES
    - Fix partyframe layout issue
    - Petbar: You can now see if a auto cast spell is active or not

1.0.2
FIXES
    - Show mirror timers (breath/fatigue) correctly
    - Fix talentframe requirment talent linked
    - Bring back HUD Scale slider

1.0.1-TBC
FIXES
    - Fix combopoint issue while target frame is inverted and combopoints hooked on target frame
    - Player pets (hunter/warlock) can not see there stats at the hero panel
    - Fix texture issue while dead
    - Spellbook spells can now be linked into the chat or macro frame
    - Character postion for Bloodelf and Draenei is now correct

1.0.0 TBC
    Many features from retail are now in tbc, like scale frame in move hud mode, player frame in target frame style and much more