@@ -2,6 +2,7 @@
 MISC
     - Many repu fixes
     - Ruputation has now a own menu button at the hero panel
+    - Added option to ignore bags from sorting (right click the bag)
 
 1.5.0
 NEW
